--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,8 +15,7 @@ services:
     ports:
       - ${DB_PORT}:5432
     volumes:
-      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./postgres:/var/lib/postgresql/data
+      - ./docker/postgres:/docker-entrypoint-initdb.d/
     networks:
       - app
 
