--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,27 @@ services:
       - ./docker/postgres:/docker-entrypoint-initdb.d/
     networks:
       - app
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nestjs-app
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - .:/app
+      - /app/node_modules
+    networks:
+      - app
+    depends_on:
+      - db
 
 networks:
   app:
